--- a/package.json
+++ b/package.json
@@ -2,36 +2,26 @@
   "name": "chat_app_2",
   "version": "1.0.0",
   "main": "index.js",
+  "repository": "https://github.com/Lukis76/chat_app_2.git",
+  "author": "lukis76 <kiu.manoguerra@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "client": "webpack serve --mode=development",
-    "server": "nodemon server/index.js",
-    "build": "webpack --mode=development",
-    "build_production": "webpack --mode=production"
-  },
-  "dependencies": {
-    "cors": "^2.8.5",
-    "dot-env": "^0.0.1",
-    "express": "^4.18.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.3.0",
-    "socket.io": "^4.5.1",
-    "styled-components": "^5.3.5"
+    "build": "webpack --mode=production",
+    "dev": "webpack serve --mode=development"
   },
   "devDependencies": {
     "@babel/core": "^7.18.13",
     "@babel/preset-react": "^7.18.6",
     "babel-loader": "^8.2.5",
     "css-loader": "^6.7.1",
-    "eslint": "^8.22.0",
     "html-webpack-plugin": "^5.5.0",
-    "nodemon": "^2.0.19",
-    "standard": "^17.0.0",
     "style-loader": "^3.3.1",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0",
-    "webpack-dev-server": "^4.10.0",
-    "babel-plugin-styled-components": "^2.0.7"
+    "webpack-dev-server": "^4.10.0"
+  },
+  "dependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   }
 }
